# Ops

./: .gitignore  .gitlab-ci.yml  README.md  ansible.cfg  cmd  hosts  requirements.txt  run.sh  setup.cfg  site.yml
ansible/: mdp.yaml
ansible/group_vars/mdp/: mdp_initial.yml  mdp_service_configs.yml
ansible/inventory/: all-in-one  mdp-all-in-one  mdp-multinode  multi-node
group_vars/: mdp_service_configs.yml
group_vars/mdp/: mdp_initial.yml  mdp_service_configs.yml
playbooks/ci/: docker_ci.yml
playbooks/mdp/: mdp.yaml  mdp_init.yml
roles/ci-docker/tasks/: main.yml
roles/common/defaults/: main.yml
roles/common/tasks/: configure_dns.yml  configure_firewalld.yml  configure_java.yml  configure_network.yml  configure_repo.yml  configure_selinux.yml  configure_ssh.yml  main.yml
roles/environments/defaults/: main.yml
roles/environments/files/: hostname_mapping.py
roles/environments/tasks/: disable_repo.yml  enable_repo.yml  init_docker_env.yml  init_mysql_client.yml  java_env.yaml  main.yml  setup_ntp.yml  sys_configs.yml  yum_repo.yml
roles/mdp-post-deploy/defaults/: main.yaml
roles/mdp-post-deploy/tasks/: check_env.yml  configure.yml  configure_collect_agent.yml  configure_docker.yml  configure_es_sql_engine.yml  configure_executors.yml  configure_galaxy.yml  configure_gateway.yml  configure_nginx.yml  configure_node_report.yml  configure_nodereport.yml  (+6 more)
scripts/initial/: init_network.sh  ssh_withoutpw.sh
tools/: debug.sh  es_data_dumper.py  mdp.sh  setup.sh  ssh_withoutpw.sh
tools/scripts/: aone-mdp  get_hosts.py  ssh_withoutpw.sh  test_run.sh
(+117 files in other folders)
