[metadata]
name = automata
summary = AONE deployment tool kits.
description-file =
    README.rst
author = AONE DevOps Team
author-email = tech@aoneai.com
home-page = http://git.dev.aone.ai/dev-ops/automata
classifier =
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Topic :: Utilities
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators

[global]
setup-hooks =
    pbr.hooks.setup_hook

[pbr]
skip_authors = True
skip_changelog = True